@@ -35,6 +35,8 @@ var posix = require('../../build/Release/posix');
 var rprog = process.env.R || 'R';
 var scriptPath = paths.projectFile('R/SockJSAdapter.R');
 
+const STDERR_PASSTHROUGH = !!process.env["SHINY_LOG_STDERR"];
+
 function exists_p(path) {
   var defer = Q.defer();
   fs.exists(path, function(exists) {
@@ -133,19 +135,26 @@ function launchWorker_p(appSpec, pw, endpoint, logFilePath, workerId) {
             logger.error('Error attempting to change permissions on log file at ' + logFilePath + ': ' + err.message);
         });
 
+        // We got a file descriptor and have chowned the file which is great, but
+        // we actually want a writeStream for this file so we can handle async
+        // writes more cleanly.
+        var writeStream = fs.createWriteStream(null,
+          {fd: logStream, flags: 'w', mode: mode })
+
+        // If we have problems writing to writeStream, report it at most once.
+        var warned = false;
+        writeStream.on('error', function(err) {
+          if (!warned) {
+            warned = true;
+            logger.warn('Error writing to log stream: ', err);
+          }
+        });
+
         // Create the worker; when it exits (or fails to start), close
         // the logStream.
-        var worker = new AppWorker(appSpec, endpoint, logStream, workerId, 
+        var worker = new AppWorker(appSpec, endpoint, writeStream, workerId, 
           pw.home);
-        worker.getExit_p()
-        .fin(function() {
-          fs.close(logStream, function(err) {
-            if (err)
-              logger.error("Couldn't close logStream: " + err.message);
-          });
-        })
-        .eat();
-
+          
         return worker;
       });
     } else {
@@ -318,7 +327,7 @@ var AppWorker = function(appSpec, endpoint, logStream, workerId, home) {
     })
     .then(function() {
       self.$proc = child_process.spawn(executable, args, {
-        stdio: ['pipe', 'pipe', logStream],
+        stdio: ['pipe', 'pipe', 'pipe'],
         cwd: appSpec.appDir,
         env: map.compact({
           'HOME' : home,
@@ -373,12 +382,39 @@ var AppWorker = function(appSpec, endpoint, logStream, workerId, home) {
           logger.trace("Closing backchannel");
         }
       });
+      self.$proc.stderr
+        .on('error', function(e) {
+          logger.error('Error on proc stderr: ' + e);
+        })
+        .pipe(split())
+          .on('data', function(line){
+            if (STDERR_PASSTHROUGH) {
+              logger.info(`[${appSpec.appDir}:${self.$pid}] ${line}`);
+            }
+            // Ensure that we, not R, are supposed to be handling logging.
+            if (logStream !== 'ignore'){
+              logStream.write(line+'\n');
+            }
+          })
+          .on('end', function() {
+            if (logStream !== 'ignore') {
+              logStream.end();
+            }
+          });
     })
     .fail(function(err){
       // An error occured spawning the process, could be we tried to launch a file
       // instead of a directory.
       logger.warn(err.message);
       
+      if (!self.$proc) {
+        // We never got around to starting the process, so the normal code path
+        // that closes logStream won't run.
+        if (logStream !== 'ignore') {
+          logStream.end();
+        }
+      }
+
       self.$dfEnded.resolve({code: -1, signal: null});
     })
     .done();
